Various Registry API fixes (#180)
* pds-registry-api 179 - fix limit=0 designating summary only.

* Reinstate /products, /bundles and /collections endpoints.

* Fix class specification in collectionsLidvidBundles() (collection -> collections)

* Add productList() method (bundleList and collectionList added to SwaggerJavaDeprecatedTransmuter.java in prior commit.

* Add productList, bundleList and collectionList handlers.

* Fix typo in Accept type.

* Move summaryOnly logic out of RequestAndResponseContext - copies it from URIParameters now.

* Shift summaryOnly logic to parameter class. See note in URIParameters.

* Remove unused constant in R&R Context
